--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.2",
     "@tailwindcss/vite": "^4.1.17",
+    "@types/file-saver": "^2.0.7",
     "axios": "^1.13.4",
+    "file-saver": "^2.0.5",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.555.0",
@@ -26,6 +28,7 @@
     "react-router-dom": "^7.13.0",
     "recharts": "^3.6.0",
     "tailwindcss": "^4.1.17",
+    "xlsx": "^0.18.5",
     "yup": "^1.7.1",
     "zustand": "^5.0.11"
   },
